Fix for touchpad/laptops track scrolling.

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 }
 
 html {
-    scroll-behavior: smooth;
+    scroll-behavior: auto; /* Lenis handles smooth scroll */
 }
 
 /* no selecting text on this site. */
